--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb://localhost:27017/ProFolioElite"
+MONGO_URI="mongodb+srv://hk810773:hk810773@cluster0.vpgqo.mongodb.net/"
 JWT_SECRET="profolio123"
