added the controller

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-MONGO_URI="mongodb+srv://hk810773:hk810773@cluster0.vpgqo.mongodb.net/"
+# MONGO_URI="mongodb+srv://hk810773:hk810773@cluster0.vpgqo.mongodb.net/"
+MONGO_URI="mongodb://localhost:27017/ProFolioElite"
+
 JWT_SECRET="profolio123"
